<resources>
    <string name="app_name">UniPool</string>
    <string name="txtEmail">Correo</string>
    <string name="txtPassword">Contraseña</string>
    <string name="btnLogin">Iniciar Sesion</string>
    <string name="btnNewAccount">Crear cuenta</string>
    <string name="newAccount">Crear una cuenta</string>
    <string name="name">Nombre</string>
    <string name="studentId">Matricula</string>
    <string name="dependency">Dependencia</string>
    <string name="email">Correo</string>
    <string name="password">Contraseña</string>
    <string name="phone_number">Telefono</string>
    <string name="name_required">El nombre es requerido</string>
    <string name="travel_destination">Destino del viaje</string>
    <string name="max_capacity">Capacidad máxima</string>
    <string name="meeting_point">Punto de encuentro</string>
    <string name="fee">Cuota</string>
    <string name="startTrip">Empezar viaje</string>
    <string name="departureTime">Hora de salida aaaa-MM-dd HH:mm:ss</string>
    <string name="map_key" translatable="false">
        AIzaSyCMsMH2eQBdfBx-NlpM9Q8ai9iNIikCYSo
    </string>
</resources>
